tdf#93867 - clear current GL context before thread switch.

Fixes regression from otherwise a nice cleanup in:
    d20092259c7ea63885a539f911788715f8147ee9

Also get polarity of debug logging only with a context right.

Change-Id: Id322471f01e5656e758aefc57b0d4d5ad073ec54